--- a/slides/cod.tex
+++ b/slides/cod.tex
@@ -28,14 +28,6 @@ xcolor={dvipsnames,svgnames,table},10pt]{beamer}
 	\titlepage 
 \end{frame}
 
-\AtBeginSubsection[]
-{
-	\begin{frame}<beamer>
-		\frametitle{Plan}
-		\tableofcontents[currentsection,currentsubsection]
-	\end{frame}
-}
-
 \AtBeginSection[]
 {
 	\begin{frame}<beamer>
@@ -48,904 +40,13 @@ xcolor={dvipsnames,svgnames,table},10pt]{beamer}
   \tableofcontents
 \end{frame} 
 
-\section{Introduction}
-\subsection{Cadre du TER}
-\begin{frame}{Cadre et objectifs}
-	\begin{itemize}
-		\item Ce TER se situe dans le cadre de Problème de flot maximum
+\section{Introduction : le flot et ses algorithmes}
 
-		\item Il existe différents types d'algorithmes répondant à ce problème, certains basés sur la recherche
-			de chaînes améliorantes (Edmonds-Karp, Ford Fulkerson, ...), d'autres sur les fonctions de préflots. 
-			Nous nous intéresserons à la seconde catégorie.
-	\end{itemize}
-\end{frame}
+\input{intro.tex}
 
-\subsection{Motivation}
-\begin{frame}{Utilité}
-	
-	Considérons une entreprise de création de plaques d'égoûts, devant acheminer sa production depuis
-	l'usine de création au lieu de stockage. \vfill
+\section{Le préflot et ses algorithmes}
 
-	\begin{center}
-		\includegraphics[scale=0.32]{img/etape1.png}
-	\end{center}
-\end{frame}
-
-\begin{frame}{Utilité}
-	Il existe différents points, par lesquels peut transiter la production.
-
-	\begin{center}
-		\includegraphics[scale=0.32]{img/etape2.png}
-	\end{center}
-\end{frame}
-
-\begin{frame}{Utilité}
-	Chaque passage est reliés aux autres à l'aide de routes permettant un transit plus ou moins facile
-	jusqu'à destination.
-
-	\begin{center}
-		\includegraphics[scale=0.32]{img/exemple.png}
-	\end{center}
-\end{frame}
-
-\begin{frame}{Utilité}
-	Chaque passage est reliés aux autres à l'aide de routes permettant un transit plus ou moins facile
-	jusqu'à destination.
-
-	\begin{center}
-		\includegraphics[scale=0.32]{img/exemple.png}
-	\end{center}
-
-	\begin{alertblock}{Bingo!}
-		Il s'agit là d'un problème de flot maximum.
-	\end{alertblock}
-\end{frame}
-
-\subsection{Définitions}
-\begin{frame}{Définitions}
-		Nous allons définir quelques notions qui seront utlisées par la suite
-		pour le déroulement de l'algorithme de préflot et ses dérivés.
-\end{frame}
-
-\begin{frame}{La notion de flot}
-	Un flot est une fonction de graphes vérifiant certaines propriétés, qui sont : \vfill \vfill
-\end{frame} 
-
-\begin{frame}{La notion de flot}
-	Un flot est une fonction de graphes vérifiant certaines propriétés, qui sont : ~\\~\\
-	\begin{exampleblock}{le respect de la capacité de l'arc}
-		La valeur du flot sur un arc ne peut être supérieure à la capacité de l'arc et ne peut être négative
-	\end{exampleblock}\vfill
-\end{frame} 
-
-\begin{frame}{La notion de flot}
-	Un flot est une fonction de graphes vérifiant certaines propriétés, qui sont :~\\~\\
-	\begin{block}{le respect de la capacité de l'arc}
-		$$\forall (i,j) \in A, \quad 0 \leq x(i,j) \leq c(i,j)$$
-	\end{block}\vfill
-	\begin{exampleblock}{le respect de la loi de Kirchoff}
-		Pour chaque noeud différent de la source et du puits, la quantité de flot entrant dans le noeud
-		est égale à la quantité de flot sortant de ce dernier.
-	\end{exampleblock}\vfill
-\end{frame} 
-
-\begin{frame}{La notion de flot}
-	Un flot est une fonction de graphes vérifiant certaines propriétés, qui sont : 
-	\begin{block}{le respect de la capacité de l'arc}
-		$$\forall (i,j) \in A, \quad 0 \leq x(i,j) \leq c(i,j)$$
-	\end{block}\vfill
-	\begin{block}{le respect de la loi de Kirchoff}
-		$$\forall i \in S - \{s,t\}, \quad \sum_{j \in A^+(i)} x(i,j) = \sum_{k\in A^-(i)} x(k,i)$$
-	\end{block}\vfill
-	\begin{exampleblock}{Le respect de la contrainte de symétrie}
-		Pour chaque arc du graphe, il n'y a aucun phénomène de perte entre le sommet de départ et le
-		sommet d'arrivée.
-	\end{exampleblock}\vfill
-\end{frame} 
-
-\begin{frame}{La notion de flot}
-	Un flot est une fonction de graphes vérifiant certaines propriétés, qui sont : 
-	\begin{block}{le respect de la capacité de l'arc}
-		$$\forall (i,j) \in A, \quad 0 \leq x(i,j) \leq c(i,j)$$
-	\end{block}\vfill
-	\begin{block}{le respect de la loi de Kirchoff}
-		$$\forall i \in S - \{s,t\}, \quad \sum_{j \in A^+(i)} x(i,j) = \sum_{k\in A^-(i)} x(k,i)$$
-	\end{block}\vfill
-	\begin{block}{Le respect de la contrainte de symétrie}
-		$$ f = \sum_{j \in A^+(s)} x(s,j) = \sum_{k\in A^- (t)} x(k,t) $$ 
-	\end{block}\vfill
-\end{frame} 
-
-\begin{frame}{La notion de préflot}
-	Un préflot est un flot ne respectant pas la loi de Kirchoff : la quantité de préflot sortant d'un
-	noeud doit être inférieure ou égale à la quantité de préflot entrant dans celui-ci.\vfill
-\end{frame}
-
-\begin{frame}{La notion de préflot}
-	Un préflot est un flot ne respectant pas la loi de Kirchoff : la quantité de préflot sortant d'un
-	noeud doit être inférieure ou égale à la quantité de préflot entrant dans celui-ci.\vfill
-	\begin{minipage}[c]{0.45\linewidth}
-		\begin{figure}
-			\begin{tikzpicture}[scale=0.7]
-				\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-				\node[noeud] (s) at (0,0) {s};
-				\node[noeud] (a) at (2, 2) {a};
-				\node[noeud] (b) at (2, -2) {b};
-				\node[noeud] (c) at (4.5, -2) {c};
-				\node[noeud] (d) at (4.5, 2) {d};
-				\node[noeud] (t) at (6.5,0) {t};
-
-				\draw[fleche, red] (s) -- node[above left, red] {$2/2$}(a);
-				\draw[fleche] (s) -- node[below left] {$0/1$}(b);
-				\draw[fleche, red] (a) -- node[left,red] {$1/1$}(b);
-				\draw[fleche, red] (a) -- node[above, red] {$1/3$}(d);
-				\draw[fleche] (d) -- node[above left] {$0/1$}(b);
-				\draw[fleche, red] (b) -- node[below, red] {$1/1$}(c);
-				\draw[fleche, red] (d) -- node[above right, red] {$1/4$}(t);
-				\draw[fleche, red] (c) -- node[below right, red] {$1/1$}(t);
-				\draw[fleche] (c) -- node[right] {$0/2$}(d);
-			\end{tikzpicture}
-			\caption{Un exemple de flot}
-		\end{figure}
-	\end{minipage} \hfill
-	\begin{minipage}[c]{0.45\linewidth}
-	\end{minipage}
-\end{frame}
-
-\begin{frame}{La notion de préflot}
-	Un préflot est un flot ne respectant pas la loi de Kirchoff : la quantité de préflot sortant d'un
-	noeud doit être inférieure ou égale à la quantité de préflot entrant dans celui-ci.\vfill
-	\begin{minipage}[c]{0.45\linewidth}
-		\begin{figure}
-			\begin{tikzpicture}[scale=0.7]
-				\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-				\node[noeud] (s) at (0,0) {s};
-				\node[noeud] (a) at (2, 2) {a};
-				\node[noeud] (b) at (2, -2) {b};
-				\node[noeud] (c) at (4.5, -2) {c};
-				\node[noeud] (d) at (4.5, 2) {d};
-				\node[noeud] (t) at (6.5,0) {t};
-
-				\draw[fleche, red] (s) -- node[above left, red] {$2/2$}(a);
-				\draw[fleche] (s) -- node[below left] {$0/1$}(b);
-				\draw[fleche, red] (a) -- node[left,red] {$1/1$}(b);
-				\draw[fleche, red] (a) -- node[above, red] {$1/3$}(d);
-				\draw[fleche] (d) -- node[above left] {$0/1$}(b);
-				\draw[fleche, red] (b) -- node[below, red] {$1/1$}(c);
-				\draw[fleche, red] (d) -- node[above right, red] {$1/4$}(t);
-				\draw[fleche, red] (c) -- node[below right, red] {$1/1$}(t);
-				\draw[fleche] (c) -- node[right] {$0/2$}(d);
-			\end{tikzpicture}
-			\caption{Un exemple de flot}
-		\end{figure}
-	\end{minipage} \hfill
-	\begin{minipage}[c]{0.45\linewidth}
-		\begin{figure}
-			\begin{tikzpicture}[scale=0.7]
-				\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-				\node[noeud] (s) at (0,0) {s};
-				\node[noeud] (a) at (2, 2) {a};
-				\node[noeud] (b) at (2, -2) {b};
-				\node[noeud] (c) at (4.5, -2) {c};
-				\node[noeud, draw=red, red] (d) at (4.5, 2) {d};
-				\node[noeud] (t) at (6.5,0) {t};
-
-				\draw[fleche, green] (s) -- node[above left, green] {$2/2$}(a);
-				\draw[fleche] (s) -- node[below left] {$0/1$}(b);
-				\draw[fleche, green] (a) -- node[left,green] {$1/1$}(b);
-				\draw[fleche, green] (a) -- node[above, green] {$1/3$}(d);
-				\draw[fleche] (d) -- node[above left] {$0/1$}(b);
-				\draw[fleche, green] (b) -- node[below, green] {$1/1$}(c);
-				\draw[fleche] (d) -- node[above right] {$0/4$}(t);
-				\draw[fleche, green] (c) -- node[below right, green] {$1/1$}(t);
-				\draw[fleche] (c) -- node[right] {$0/2$}(d);
-			\end{tikzpicture}
-			\caption{Un exemple de préflot}
-		\end{figure}
-	\end{minipage}
-\end{frame}
-
-\begin{frame}{Noeud Actif}
-	Un noeud dont la quantité de préflot entrant est supérieure à la quantité de préflot sortant est
-	dit actif, la différence est appelée excédent et est notée $e$. \vfill
-\end{frame}
-
-\begin{frame}{Noeud Actif}
-	Un noeud dont la quantité de préflot entrant est supérieure à la quantité de préflot sortant est
-	dit actif, la différence est appelée excédent et est notée $e$.
-
-	\begin{center}
-		\begin{tikzpicture}[scale=0.65]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-			\node[noeud] (s) at (0,0) {s};
-			\node[noeud] (a) at (2, 2) {a};
-			\node[noeud] (b) at (2, -2) {b};
-			\node[noeud] (c) at (4.5, -2) {c};
-			\node[noeud, draw=red, red] (d) at (4.5, 2) {d};
-			\node[noeud] (t) at (6.5,0) {t};
-
-			\draw[fleche, green] (s) -- node[above left, green] {$2/2$}(a);
-			\draw[fleche] (s) -- node[below left] {$0/1$}(b);
-			\draw[fleche, green] (a) -- node[left,green] {$1/1$}(b);
-			\draw[fleche, green] (a) -- node[above, green] {$1/3$}(d);
-			\draw[fleche] (d) -- node[above left] {$0/1$}(b);
-			\draw[fleche, green] (b) -- node[below, green] {$1/1$}(c);
-			\draw[fleche] (d) -- node[above right] {$0/4$}(t);
-			\draw[fleche, green] (c) -- node[below right, green] {$1/1$}(t);
-			\draw[fleche] (c) -- node[right] {$0/2$}(d);
-		\end{tikzpicture}
-	\end{center}
-
-	\begin{alertblock}{Remarque}
-		Ici $d$ est actif et $e(d) = 1$
-	\end{alertblock}
-\end{frame}
-
-\begin{frame}{Le réseau résiduel}
- 	Soit un graphe $G(S, A)$, un flot (ou préflot) $f$ et $i,j$ deux sommets de $G$. On dira que
-	l'arête $(i,j)$ appartiendra au réseau résiduel $A_f$ si et seulement si la capacité résiduelle
-	est non nulle.
-
-	\begin{alertblock}{Autrement dit}
-	 	$$ r(i,j) = c(i,j) - x(i,j) > 0 $$ 
-	\end{alertblock}
-
-	On appelle alors $r(i,j)$ la capacité résiduelle de l'arête $(i,j)$. 
-	\vfill
-\end{frame}
-
-\begin{frame}{Le réseau résiduel}
- 	Soit un graphe $G(S, A)$, un flot (ou préflot) $f$ et $i,j$ deux sommets de $G$. On dira que
-	l'arête $(i,j)$ appartiendra au réseau résiduel $A_f$ si et seulement si la capacité résiduelle
-	est non nulle.
-
-	\begin{alertblock}{Autrement dit}
-	 	$$ r(i,j) = c(i,j) - x(i,j) > 0 $$ 
-	\end{alertblock}
-
-
-	On appelle alors $r(i,j)$ la capacité résiduelle de l'arête $(i,j)$. 
-
-	\begin{block}{Note}
-		Si $x(i,j) > 0$ alors $(j,i)$ appartient au réseau résiduel avec une capacité résiduelle $r(j,i) = x(i,j)$.
-	\end{block}
-\end{frame}
-
-\begin{frame}{Le réseau résiduel}
-	Pour le flot suivant, ... \vfill
-	\begin{minipage}[c]{0.45\linewidth}
-		\begin{figure}
-			\begin{tikzpicture}[scale=0.7]
-				\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-				\node[noeud] (s) at (0,0) {s};
-				\node[noeud] (a) at (2, 2) {a};
-				\node[noeud] (b) at (2, -2) {b};
-				\node[noeud] (c) at (4.5, -2) {c};
-				\node[noeud] (d) at (4.5, 2) {d};
-				\node[noeud] (t) at (6.5,0) {t};
-
-				\draw[fleche, red] (s) -- node[above left, red] {$2/2$}(a);
-				\draw[fleche] (s) -- node[below left] {$0/1$}(b);
-				\draw[fleche, red] (a) -- node[left,red] {$1/1$}(b);
-				\draw[fleche, red] (a) -- node[above, red] {$1/3$}(d);
-				\draw[fleche] (d) -- node[above left] {$0/1$}(b);
-				\draw[fleche, red] (b) -- node[below, red] {$1/1$}(c);
-				\draw[fleche, red] (d) -- node[above right, red] {$1/4$}(t);
-				\draw[fleche, red] (c) -- node[below right, red] {$1/1$}(t);
-				\draw[fleche] (c) -- node[right] {$0/2$}(d);
-			\end{tikzpicture}
-			\caption{Un exemple de flot}
-		\end{figure}
-	\end{minipage} \hfill
-	\begin{minipage}[c]{0.45\linewidth}
-	\end{minipage}
-\end{frame}
-
-\begin{frame}{Le réseau résiduel}
-	$\dots$ on a le réseau résiduel suivant : \vfill
-	\begin{minipage}[c]{0.45\linewidth}
-		\begin{figure}
-			\begin{tikzpicture}[scale=0.7]
-				\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-				\node[noeud] (s) at (0,0) {s};
-				\node[noeud] (a) at (2, 2) {a};
-				\node[noeud] (b) at (2, -2) {b};
-				\node[noeud] (c) at (4.5, -2) {c};
-				\node[noeud] (d) at (4.5, 2) {d};
-				\node[noeud] (t) at (6.5,0) {t};
-
-				\draw[fleche, red] (s) -- node[above left, red] {$2/2$}(a);
-				\draw[fleche] (s) -- node[below left] {$0/1$}(b);
-				\draw[fleche, red] (a) -- node[left,red] {$1/1$}(b);
-				\draw[fleche, red] (a) -- node[above, red] {$1/3$}(d);
-				\draw[fleche] (d) -- node[above left] {$0/1$}(b);
-				\draw[fleche, red] (b) -- node[below, red] {$1/1$}(c);
-				\draw[fleche, red] (d) -- node[above right, red] {$1/4$}(t);
-				\draw[fleche, red] (c) -- node[below right, red] {$1/1$}(t);
-				\draw[fleche] (c) -- node[right] {$0/2$}(d);
-			\end{tikzpicture}
-			\caption{Un exemple de flot}
-		\end{figure}
-	\end{minipage} \hfill
-	\begin{minipage}[c]{0.45\linewidth}
-		\begin{figure}
-			\begin{tikzpicture}[scale=0.7]
-				\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-				\node[noeud] (s) at (0,0) {s};
-				\node[noeud] (a) at (2, 2) {a};
-				\node[noeud] (b) at (2, -2) {b};
-				\node[noeud] (c) at (4.5, -2) {c};
-				\node[noeud] (d) at (4.5, 2) {d};
-				\node[noeud] (t) at (6.5,0) {t};
-
-				\draw[fleche, purple] (a) -- node[above left, purple] {$2$}(s);
-				\draw[fleche] (s) -- node[below left] {$1$}(b);
-				\draw[fleche, purple] (b) -- node[left, purple] {$1$}(a);
-				\draw[fleche] (a) to[out=15, in=165]  node[above] {$2$}(d);
-				\draw[fleche, purple] (d) to[out=195, in=345]  node[below, purple] {$1$}(a);
-				\draw[fleche] (d) -- node[below right] {$1$}(b);
-				\draw[fleche, purple] (c) -- node[below, purple] {$1$}(b);
-				\draw[fleche] (d) to[out=295, in=145] node[below left] {$3$}(t);
-				\draw[fleche, purple] (t) to[out=115, in=335] node[above right, purple] {$1$}(d);
-				\draw[fleche, purple] (t) -- node[below right, purple] {$1$}(c);
-				\draw[fleche] (c) -- node[right] {$2$}(d);
-			\end{tikzpicture}
-			\caption{Le réseau résiduel associé}
-		\end{figure}
-	\end{minipage}
-\end{frame}
-
-\begin{frame}{La fonction de distance}
-	Une fonction de distance est une fonction représentant le plus court chemin en nombre d'arcs d'un
-	noeud au puits, vérifiant les propriétés suivantes :\vfill
-\end{frame}
-
-\begin{frame}{La fonction de distance}
-	Une fonction de distance est une fonction représentant le plus court chemin en nombre d'arcs d'un
-	noeud au puits, vérifiant les propriétés suivantes : \vfill
-	\begin{exampleblock}{Distance de la source}
-		la distance de la source est égale au nombre de sommets du graphe
-	\end{exampleblock} \vfill
-\end{frame}
-
-\begin{frame}{La fonction de distance}
-	Une fonction de distance est une fonction représentant le plus court chemin en nombre d'arcs d'un
-	noeud au puits, vérifiant les propriétés suivantes : \vfill
-	\begin{block}{Propriétés}
-		$$ d(s) = |S| $$
-	\end{block} \vfill
-	\begin{exampleblock}{Distance du puits}
-		la distance du puits est égale à zéro
-	\end{exampleblock} \vfill
-\end{frame}
-
-\begin{frame}{La fonction de distance}
-	Une fonction de distance est une fonction représentant la distance d'un noeud au puits, vérifiant
-	les propriétés suivantes : \vfill
-	\begin{block}{Propriétés}
-		$$ d(s) = |S| $$
-		$$ d(t) = 0 $$
-	\end{block} \vfill
-	\begin{exampleblock}{Distances des sommets}
-		si $(i,j)$ appartient au réseau résiduel, la distance du sommet $i$ est égale à la distance du sommet $i$ plus un
-	\end{exampleblock}
-\end{frame}
-
-\begin{frame}{La fonction de distance}
-	Une fonction de distance est une fonction représentant la distance d'un noeud au puits, vérifiant
-	les propriétés suivantes : \vfill
-	\begin{block}{Propriétés}
-		$$ d(s) = |S| $$
-		$$ d(t) = 0 $$
-		$$ \forall (i,j) \in A_f,\quad d(i) = d(j) + 1 $$
-	\end{block}
-\end{frame}
-
-\begin{frame}{Conséquences sur le réseau résiduel}
-	Le réseau résiduel associé au flot suivant : \vfill
-	\begin{minipage}[c]{0.45\linewidth}
-		\begin{figure}
-			\begin{tikzpicture}[scale=0.7]
-				\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-				\node[noeud] (s) at (0,0) {s};
-				\node[noeud] (a) at (2, 2) {a};
-				\node[noeud] (b) at (2, -2) {b};
-				\node[noeud] (c) at (4.5, -2) {c};
-				\node[noeud] (d) at (4.5, 2) {d};
-				\node[noeud] (t) at (6.5,0) {t};
-
-				\draw[fleche, red] (s) -- node[above left, red] {$2/2$}(a);
-				\draw[fleche] (s) -- node[below left] {$0/1$}(b);
-				\draw[fleche, red] (a) -- node[left,red] {$1/1$}(b);
-				\draw[fleche, red] (a) -- node[above, red] {$1/3$}(d);
-				\draw[fleche] (d) -- node[above left] {$0/1$}(b);
-				\draw[fleche, red] (b) -- node[below, red] {$1/1$}(c);
-				\draw[fleche, red] (d) -- node[above right, red] {$1/4$}(t);
-				\draw[fleche, red] (c) -- node[below right, red] {$1/1$}(t);
-				\draw[fleche] (c) -- node[right] {$0/2$}(d);
-			\end{tikzpicture}
-			\caption{Un exemple de flot}
-		\end{figure}
-	\end{minipage} \hfill
-	\begin{minipage}[c]{0.45\linewidth}
-	\end{minipage}
-\end{frame}
-
-\begin{frame}{Conséquences sur le réseau résiduel}
-	Le réseau résiduel associé au flot suivant, devient : \vfill
-	\begin{minipage}[c]{0.45\linewidth}
-		\begin{figure}
-			\begin{tikzpicture}[scale=0.7]
-				\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-				\node[noeud] (s) at (0,0) {s};
-				\node[noeud] (a) at (2, 2) {a};
-				\node[noeud] (b) at (2, -2) {b};
-				\node[noeud] (c) at (4.5, -2) {c};
-				\node[noeud] (d) at (4.5, 2) {d};
-				\node[noeud] (t) at (6.5,0) {t};
-
-				\draw[fleche, red] (s) -- node[above left, red] {$2/2$}(a);
-				\draw[fleche] (s) -- node[below left] {$0/1$}(b);
-				\draw[fleche] (a) -- node[left] {$0/1$}(b);
-				\draw[fleche, red] (a) -- node[above, red] {$1/3$}(d);
-				\draw[fleche] (d) -- node[above left] {$0/1$}(b);
-				\draw[fleche] (b) -- node[below] {$0/1$}(c);
-				\draw[fleche, red] (d) -- node[above right, red] {$1/4$}(t);
-				\draw[fleche] (c) -- node[below right] {$0/1$}(t);
-				\draw[fleche] (c) -- node[right] {$0/2$}(d);
-			\end{tikzpicture}
-			\caption{Un exemple de flot}
-		\end{figure}
-	\end{minipage} \hfill
-	\begin{minipage}[c]{0.45\linewidth}
-		\begin{figure}
-			\begin{tikzpicture}[scale=0.7]
-				\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-				\node[noeud] (s) at (0,0) {s};
-				\node[noeud] (a) at (2, 2) {a};
-				\node[noeud] (b) at (2, -2) {b};
-				\node[noeud] (c) at (4.5, -2) {c};
-				\node[noeud] (d) at (4.5, 2) {d};
-				\node[noeud] (t) at (6.5,0) {t};
-
-				\draw[fleche] (s) -- node[below left] {$1$}(b);
-				\draw[fleche] (a) to node[above] {$2$}(d);
-				\draw[fleche] (d) to node[below left] {$3$}(t);
-				\draw[fleche] (c) -- node[below right] {$1$}(t);
-				\draw[fleche] (b) -- node[below] {$1$}(c);
-			\end{tikzpicture}
-			\caption{Le réseau résiduel associé}
-		\end{figure}
-	\end{minipage}
-\end{frame}
-
-\begin{frame}{Introduction aux opérations}
-	Considérons le graphe suivant :\vfill
-
-	\begin{figure}
-	\begin{center}
-		\begin{tikzpicture}[scale=0.6]
-			\tikzset{noeud/.style={circle, draw=black, text centered,minimum size=16pt, inner sep=0pt},
-			fleche/.style={thick}};
-
-			\node[noeud] (t) at (14, 0) {$t$};
-			\node[noeud] (s) at (2, 0) {$s$};
-
-			\foreach \x in {2, 3, 4, 5}{
-				\node[noeud] (\x) at (2*\x, 0) {$\x$}; 
-			}
-
-			\foreach \y/\ytext in {3.5/6, 1.7/7, -1.7/55, -3.5/56}{
-				\node[noeud] (\ytext) at (12, \y) {$\ytext$};
-				\draw[fleche] (5) --node[right] {$1$} (\ytext) --node[left] {$1$} (t);
-			}
-
-			\node (point) at (12, 0) {$\vdots$};
-
-			\draw[fleche] (s) --node[above] {$\infty$} (2) --node[above] {$\infty$} (3) --node[above] {$\infty$}
-			(4) --node[above] {$\infty$} (5) ;
-
-		\end{tikzpicture}
-	\end{center}
-\end{figure} \vfill
-\end{frame}
-
-\begin{frame}{Introduction aux opérations}
-	Considérons le graphe suivant :\vfill
-
-	\begin{figure}
-	\begin{center}
-		\begin{tikzpicture}[scale=0.6]
-			\tikzset{noeud/.style={circle, draw=black, text centered,minimum size=16pt, inner sep=0pt},
-			fleche/.style={thick}};
-
-			\node[noeud] (t) at (14, 0) {$t$};
-			\node[noeud] (s) at (2, 0) {$s$};
-
-			\foreach \x in {2, 3, 4, 5}{
-				\node[noeud] (\x) at (2*\x, 0) {$\x$}; 
-			}
-
-			\foreach \y/\ytext in {3.5/6, 1.7/7, -1.7/55, -3.5/56}{
-				\node[noeud] (\ytext) at (12, \y) {$\ytext$};
-				\draw[fleche] (5) --node[right] {$1$} (\ytext) --node[left] {$1$} (t);
-			}
-
-			\node (point) at (12, 0) {$\vdots$};
-
-			\draw[fleche] (s) --node[above] {$\infty$} (2) --node[above] {$\infty$} (3) --node[above] {$\infty$}
-			(4) --node[above] {$\infty$} (5) ;
-
-		\end{tikzpicture}
-	\end{center}
-\end{figure} \vfill
-\begin{alertblock}{Constat}
-Il met en défaut les algorithmes de recherche de chaînes améliorantes.
-\end{alertblock}
-\end{frame}
-
-\begin{frame}{Poussage}
-	\textbf{Poussage :} L'action de faire transiter le préflot d'un noeud $i$ à un noeud $j$ est appelée
-	opération de poussage.\\
-\end{frame}
-
-\begin{frame}{Poussage}
-	\textbf{Poussage :} L'action de faire transiter le préflot d'un noeud $i$ à un noeud $j$ est appelée
-	opération de poussage.\\
-	\begin{alertblock}{Condition}
-		On ne peut pas appliquer un poussage sur l'arrête $(i,j)$ que si le sommet $i$ est
-		actif, $C_f$ $(i,j)>0$ et $d(i) = d(j)$ + 1.\\
-	\end{alertblock}
-\end{frame}
-
-\begin{frame}{Application des poussages}
-	Reprenons le graphe précédent :\vfill
-
-	\begin{figure}
-	\begin{center}
-		\begin{tikzpicture}[scale=0.6]
-			\tikzset{noeud/.style={circle, draw=black, text centered,minimum size=16pt, inner sep=0pt},
-			fleche/.style={thick}};
-
-			\node[noeud] (t) at (14, 0) {$t$};
-			\node[noeud] (s) at (2, 0) {$s$};
-
-			\foreach \x in {2, 3, 4, 5}{
-				\node[noeud] (\x) at (2*\x, 0) {$\x$}; 
-			}
-
-			\foreach \y/\ytext in {3.5/6, 1.7/7, -1.7/55, -3.5/56}{
-				\node[noeud] (\ytext) at (12, \y) {$\ytext$};
-				\draw[fleche] (5) --node[right] {$1$} (\ytext) --node[left] {$1$} (t);
-			}
-
-			\node (point) at (12, 0) {$\vdots$};
-
-			\draw[fleche] (s) --node[above] {$\infty$} (2);
-			\draw[fleche] (2) --node[above] {$\infty$} (3);
-			\draw[fleche] (3) --node[above] {$\infty$} (4);
-			\draw[fleche] (4) --node[above] {$\infty$} (5) ;
-
-		\end{tikzpicture}
-	\end{center}
-\end{figure} \vfill
-\end{frame}
-
-\begin{frame}{Application des poussages}
-	Reprenons le graphe précédent :\vfill
-
-	\begin{figure}
-	\begin{center}
-		\begin{tikzpicture}[scale=0.6]
-			\tikzset{noeud/.style={circle, draw=black, text centered,minimum size=16pt, inner sep=0pt},
-			fleche/.style={thick}};
-
-			\node[noeud] (t) at (14, 0) {$t$};
-			\node[noeud] (s) at (2, 0) {$s$};
-
-			\foreach \x in {2, 3, 4, 5}{
-				\node[noeud] (\x) at (2*\x, 0) {$\x$}; 
-			}
-
-			\foreach \y/\ytext in {3.5/6, 1.7/7, -1.7/55, -3.5/56}{
-				\node[noeud] (\ytext) at (12, \y) {$\ytext$};
-				\draw[fleche] (5) --node[right] {$1$} (\ytext) --node[left] {$1$} (t);
-			}
-
-			\node (point) at (12, 0) {$\vdots$};
-
-			\draw[fleche, red] (s) --node[above, red] {$\infty$} (2);
-			\draw[fleche] (2) --node[above] {$\infty$} (3);
-			\draw[fleche] (3) --node[above] {$\infty$} (4);
-			\draw[fleche] (4) --node[above] {$\infty$} (5) ;
-
-		\end{tikzpicture}
-	\end{center}
-\end{figure} \vfill
-\end{frame}
-
-\begin{frame}{Application des poussages}
-	Reprenons le graphe précédent :\vfill
-
-	\begin{figure}
-	\begin{center}
-		\begin{tikzpicture}[scale=0.6]
-			\tikzset{noeud/.style={circle, draw=black, text centered,minimum size=16pt, inner sep=0pt},
-			fleche/.style={thick}};
-
-			\node[noeud] (t) at (14, 0) {$t$};
-			\node[noeud] (s) at (2, 0) {$s$};
-
-			\foreach \x in {2, 3, 4, 5}{
-				\node[noeud] (\x) at (2*\x, 0) {$\x$}; 
-			}
-
-			\foreach \y/\ytext in {3.5/6, 1.7/7, -1.7/55, -3.5/56}{
-				\node[noeud] (\ytext) at (12, \y) {$\ytext$};
-				\draw[fleche] (5) --node[right] {$1$} (\ytext) --node[left] {$1$} (t);
-			}
-
-			\node (point) at (12, 0) {$\vdots$};
-
-			\draw[fleche, red] (s) --node[above, red] {$\infty$} (2);
-			\draw[fleche, red] (2) --node[above, red] {$\infty$} (3);
-			\draw[fleche] (3) --node[above] {$\infty$} (4);
-			\draw[fleche] (4) --node[above] {$\infty$} (5) ;
-
-		\end{tikzpicture}
-	\end{center}
-\end{figure} \vfill
-\end{frame}
-
-\begin{frame}{Application des poussages}
-	Reprenons le graphe précédent :\vfill
-
-	\begin{figure}
-	\begin{center}
-		\begin{tikzpicture}[scale=0.6]
-			\tikzset{noeud/.style={circle, draw=black, text centered,minimum size=16pt, inner sep=0pt},
-			fleche/.style={thick}};
-
-			\node[noeud] (t) at (14, 0) {$t$};
-			\node[noeud] (s) at (2, 0) {$s$};
-
-			\foreach \x in {2, 3, 4, 5}{
-				\node[noeud] (\x) at (2*\x, 0) {$\x$}; 
-			}
-
-			\foreach \y/\ytext in {3.5/6, 1.7/7, -1.7/55, -3.5/56}{
-				\node[noeud] (\ytext) at (12, \y) {$\ytext$};
-				\draw[fleche] (5) --node[right] {$1$} (\ytext) --node[left] {$1$} (t);
-			}
-
-			\node (point) at (12, 0) {$\vdots$};
-
-			\draw[fleche, red] (s) --node[above, red] {$\infty$} (2);
-			\draw[fleche, red] (2) --node[above, red] {$\infty$} (3);
-			\draw[fleche, red] (3) --node[above, red] {$\infty$} (4);
-			\draw[fleche] (4) --node[above] {$\infty$} (5) ;
-
-		\end{tikzpicture}
-	\end{center}
-\end{figure} \vfill
-\end{frame}
-
-\begin{frame}{Application des poussages}
-	Reprenons le graphe précédent :\vfill
-
-	\begin{figure}
-	\begin{center}
-		\begin{tikzpicture}[scale=0.6]
-			\tikzset{noeud/.style={circle, draw=black, text centered,minimum size=16pt, inner sep=0pt},
-			fleche/.style={thick}};
-
-			\node[noeud] (t) at (14, 0) {$t$};
-			\node[noeud] (s) at (2, 0) {$s$};
-
-			\foreach \x in {2, 3, 4, 5}{
-				\node[noeud] (\x) at (2*\x, 0) {$\x$}; 
-			}
-
-			\foreach \y/\ytext in {3.5/6, 1.7/7, -1.7/55, -3.5/56}{
-				\node[noeud] (\ytext) at (12, \y) {$\ytext$};
-				\draw[fleche] (5) --node[right] {$1$} (\ytext) --node[left] {$1$} (t);
-			}
-
-			\node (point) at (12, 0) {$\vdots$};
-
-			\draw[fleche, red] (s) --node[above, red] {$\infty$} (2);
-			\draw[fleche, red] (2) --node[above, red] {$\infty$} (3);
-			\draw[fleche, red] (3) --node[above, red] {$\infty$} (4);
-			\draw[fleche, red] (4) --node[above, red] {$\infty$} (5) ;
-
-		\end{tikzpicture}
-	\end{center}
-\end{figure} \vfill
-\end{frame}
-
-\begin{frame}{Application des poussages}
-	Reprenons le graphe précédent :\vfill
-
-	\begin{figure}
-	\begin{center}
-		\begin{tikzpicture}[scale=0.6]
-			\tikzset{noeud/.style={circle, draw=black, text centered,minimum size=16pt, inner sep=0pt},
-			fleche/.style={thick}};
-
-			\node[noeud] (t) at (14, 0) {$t$};
-			\node[noeud] (s) at (2, 0) {$s$};
-
-			\foreach \x in {2, 3, 4, 5}{
-				\node[noeud] (\x) at (2*\x, 0) {$\x$}; 
-			}
-
-			\foreach \y/\ytext in {3.5/6, 1.7/7, -1.7/55, -3.5/56}{
-				\node[noeud] (\ytext) at (12, \y) {$\ytext$};
-				\draw[fleche, red] (5) --node[right, red] {$1$} (\ytext) --node[left] {$1$} (t);
-			}
-
-			\node (point) at (12, 0) {$\vdots$};
-
-			\draw[fleche, red] (s) --node[above, red] {$\infty$} (2);
-			\draw[fleche, red] (2) --node[above, red] {$\infty$} (3);
-			\draw[fleche, red] (3) --node[above, red] {$\infty$} (4);
-			\draw[fleche, red] (4) --node[above, red] {$\infty$} (5) ;
-
-		\end{tikzpicture}
-	\end{center}
-\end{figure} \vfill
-\end{frame}
-
-\begin{frame}{Application des poussages}
-	Reprenons le graphe précédent :\vfill
-
-	\begin{figure}
-	\begin{center}
-		\begin{tikzpicture}[scale=0.6]
-			\tikzset{noeud/.style={circle, draw=black, text centered,minimum size=16pt, inner sep=0pt},
-			fleche/.style={thick}};
-
-			\node[noeud] (t) at (14, 0) {$t$};
-			\node[noeud] (s) at (2, 0) {$s$};
-
-			\foreach \x in {2, 3, 4, 5}{
-				\node[noeud] (\x) at (2*\x, 0) {$\x$}; 
-			}
-
-			\foreach \y/\ytext in {3.5/6, 1.7/7, -1.7/55, -3.5/56}{
-				\node[noeud] (\ytext) at (12, \y) {$\ytext$};
-				\draw[fleche, red] (5) --node[right, red] {$1$} (\ytext) --node[left] {$1$} (t);
-			}
-
-			\node (point) at (12, 0) {$\vdots$};
-
-			\draw[fleche, red] (s) --node[above, red] {$\infty$} (2);
-			\draw[fleche, red] (2) --node[above, red] {$\infty$} (3);
-			\draw[fleche, red] (3) --node[above, red] {$\infty$} (4);
-			\draw[fleche, red] (4) --node[above, red] {$\infty$} (5) ;
-
-		\end{tikzpicture}
-	\end{center}
-\end{figure} \vfill
-\begin{exampleblock}{Et maintenant...}
-	Que faire?
-\end{exampleblock}
-\end{frame}
-
-\begin{frame}{Réétiquetage}
-	\textbf{Réétiquetage :} Le ré-étiquetage consiste à réévaluer la distance du noeud actif au
-	noeud puits afin qu'il soit possible, après cette opération, d'effectuer une opération de
-	poussage depuis ce noeud.
-\end{frame}
-
-\begin{frame}{Réétiquetage}
-	\textbf{Réétiquetage :} Le ré-étiquetage consiste à réévaluer la distance du noeud actif au
-	noeud puits afin qu'il soit possible, après cette opération, d'effectuer une opération de
-	poussage depuis ce noeud.
-	\begin{alertblock}{Condition}
-		On ne peut pas réétiqueter que si $i$ est actif et, pour tout $j \in S$ tel
-		que $(i,j) \in A_f$. On a $d (i)\leq d (j)$. 
-	\end{alertblock}
-\end{frame}
-
-\section{Présentation de l'Algorithme de préflot-Générique}
-\subsection{Principe}
-
-\begin{frame}{Première approche}
-	Le graphe est assimilé à un réseau de tuyaux de capacité donnée.\vfill
-\end{frame}
-
-\begin{frame}{Première approche}
-	Le graphe est assimilé à un réseau de tuyaux de capacité donnée.\vfill
-	Chaque noeud possède un réservoir de capacité infinie.\vfill
-\end{frame}
-
-\begin{frame}{Première approche}
-	Le graphe est assimilé à un réseau de tuyaux de capacité donnée.\vfill
-	Chaque noeud possède un réservoir de capacité infinie.\vfill
-	Seule la source possède un réservoir plein. \vfill
-\end{frame}
-
-\begin{frame}{Première approche}
-	Le graphe est assimilé à un réseau de tuyaux de capacité donnée.\vfill
-	Chaque noeud possède un réservoir de capacité infinie.\vfill
-	Seule la source possède un réservoir plein. \vfill
-	À chaque noeud est associée une hauteur.\vfill
-\end{frame}
-
-\begin{frame}{Première approche}
-	Le graphe est assimilé à un réseau de tuyaux de capacité donnée.\vfill
-	Chaque noeud possède un réservoir de capacité infinie.\vfill
-	Seule la source possède un réservoir plein. \vfill
-	À chaque noeud est associée une hauteur.\vfill
-	Deux actions possibles : \begin{enumerate}
-		\item vidange du réservoir
-	\end{enumerate} \vfill
-\end{frame}
-
-\begin{frame}{Première approche}
-	Le graphe est assimilé à un réseau de tuyaux de capacité donnée.\vfill
-	Chaque noeud possède un réservoir de capacité infinie.\vfill
-	Seule la source possède un réservoir plein. \vfill
-	À chaque noeud est associée une hauteur.\vfill
-	Deux actions possibles : \begin{enumerate}
-		\item vidange du réservoir
-		\item augmentation de la hauteur du réservoir
-	\end{enumerate} \vfill
-\end{frame}
-
-\begin{frame}{Première approche}
-	Le graphe est assimilé à un réseau de tuyaux de capacité donnée.\vfill
-	Chaque noeud possède un réservoir de capacité infinie.\vfill
-	Seule la source possède un réservoir plein. \vfill
-	À chaque noeud est associée une hauteur.\vfill
-	Deux actions possibles : \begin{enumerate}
-		\item vidange du réservoir
-		\item augmentation de la hauteur du réservoir
-	\end{enumerate} \vfill
-	On commence par vidanger la source, puis on cherche à vidanger les noeuds dont le réservoir n'est
-	pas vide. \vfill
-\end{frame}
-
-\begin{frame}{Première approche}
-	Le graphe est assimilé à un réseau de tuyaux de capacité donnée.\vfill
-	Chaque noeud possède un réservoir de capacité infinie.\vfill
-	Seule la source possède un réservoir plein. \vfill
-	À chaque noeud est associée une hauteur.\vfill
-	Deux actions possibles : \begin{enumerate}
-		\item vidange du réservoir
-		\item augmentation de la hauteur du réservoir
-	\end{enumerate} \vfill
-	On commence par vidanger la source, puis on cherche à vidanger les noeuds dont le réservoir n'est
-	pas vide. \vfill
-	Si on ne peut vidanger aucun réservoir et qu'il reste des réservoirs non vides, on augmente la
-	hauteur de ces derniers. \vfill
-\end{frame}
-
-\begin{frame}{Approche formelle}
-	L'algorithme examine les noeuds actifs.\vfill
-\end{frame}
-
-\begin{frame}{Approche formelle}
-	L'algorithme examine les noeuds actifs.\vfill
-	Il cherche à réduire l'excédent de flot en l'envoyant vers un noeud voisin dans le graphe
-	résiduel (Poussage).\vfill
-\end{frame}
-
-\begin{frame}{Approche formelle}
-	L'algorithme examine les noeuds actifs.\vfill
-	Il cherche à réduire l'excédent de flot en l'envoyant vers un noeud voisin dans le graphe
-	résiduel (Poussage).\vfill
-	S'il n'existe aucun voisin, on augmente la distance du noeud au puits (Ré-étiquetage).\vfill
-\end{frame}
-
-\begin{frame}{Approche formelle}
-	L'algorithme examine les noeuds actifs.\vfill
-	Il cherche à réduire l'excédent de flot en l'envoyant vers un noeud voisin dans le graphe
-	résiduel (Poussage).\vfill
-	S'il n'existe aucun voisin, on augmente la distance du noeud au puits (Ré-étiquetage).\vfill
-	Lorsque plus aucun noeud est actif, le préflot restant est un flot maximum.\vfill
-\end{frame}
+\input{preflots.tex}
 
 \subsection{Les procédures}
 
